# Philoignore

./: .gitignore  LICENSE  MANIFEST.in  ReadMe.md  files.txt  main.py  pyproject.toml  setup.cfg
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: FORM-NAME.yml  config.yml
Philoignore/: .gitignore  __init__.py  cli.py  files.txt  list.txt
Philoignore/constants/: informations.py  service.py
Philoignore/templates/: 1c-bitrix.gitignore  1c.gitignore  a-frame.gitignore  actionscript.gitignore  ada.gitignore  adobe.gitignore  advancedinstaller.gitignore  adventuregamestudio.gitignore  agda.gitignore  al.gitignore  alteraquartusii.gitignore  altium.gitignore  amplify.gitignore  anjuta.gitignore  ansibletower.gitignore  apachecordova.gitignore  apachehadoop.gitignore  appbuilder.gitignore  appceleratortitanium.gitignore  appcode+all.gitignore  appcode+iml.gitignore  appcode.gitignore  appengine.gitignore  aptanastudio.gitignore  arcanist.gitignore  archive.gitignore  archives.gitignore  asdf.gitignore  assembler.gitignore  astro.gitignore  ate.gitignore  atmelstudio.gitignore  ats.gitignore  audio.gitignore  autohotkey.gitignore  automationstudio.gitignore  autotools+strict.gitignore  autotools.gitignore  awr.gitignore  azurefunctions.gitignore  (+454 more)
tests/: test_cli.py
