[metadata]
name = Philoignore
version = 0.0.1
description = A simple command line gitignore generator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lnxpy/hey
author = Hr-ArshA
author_email = a_sh1379@yahoo.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
keywords = philoignore

[options]
packages = find:
install_requires =
    rich>=13.3.4
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    Philoignore
    Philoignore.*

[options.entry_points]
console_scripts =
    Philoignore=Philoignore.cli:main

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:hey/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs